# QtOpenGL

./: .cproject  .project  CMakeLists.txt  Makefile  QOglTest.pro  QtMakefile  QtMakefile.Debug  QtMakefile.Release  README.md
QOglTest.app/Contents/: Info.plist
QOglTest.app/Contents/MacOS/: QOglTest
release/: moc_DateTime.cpp  moc_MainWidget.cpp
src/: MainWidget.cpp  MainWidget.h  QOglTest.cpp
